set(PERMISSIONS_755
    OWNER_READ OWNER_EXECUTE
    GROUP_READ GROUP_EXECUTE
    WORLD_READ WORLD_EXECUTE
)

set(PERMISSIONS_644
    OWNER_READ OWNER_WRITE
    GROUP_READ
    WORLD_READ
)

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/bin")
    file(GLOB BINS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/bin/*")
    list(FILTER BINS EXCLUDE REGEX "__pycache__")
    list(FILTER BINS EXCLUDE REGEX "nanopb_generator")
    list(FILTER BINS EXCLUDE REGEX "protoc-gen-nanopb")
    install(PROGRAMS ${BINS}
        DESTINATION ${CMAKE_INSTALL_BINDIR}
        # PERMISSIONS ${PERMISSIONS_755}
    )
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/include")
    install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/lib")
    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/ DESTINATION ${CMAKE_INSTALL_LIBDIR})
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/share")
    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/share/ DESTINATION ${CMAKE_INSTALL_DATAROOTDIR})
endif()
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/ssl")
    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ssl/ DESTINATION ssl)
endif()
